cluster/media/readarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  selector:
    matchLabels:
      app: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
      - image: ghcr.io/onedr0p/readarr-develop:0.2.2.1943@sha256:ed3852b4121d76a3a4024550fd835a52ad697de14d61d117259f6a9d7a0ee1e8
        name: readarr
        resources:
          requests:
            cpu: 15m
            memory: 150Mi
          limits:
            cpu: 2000m
            memory: 1Gi
        ports:
        - containerPort: 8787
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: torrents-v2
          mountPath: /torrents
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: readarr-config
      - name: torrents-v2
        persistentVolumeClaim:
          claimName: torrents-v2
