cluster/media/readarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
spec:
  rules:
  - host: readarr.sko.ai
    http:
      paths:
      - backend:
          service:
            name: readarr
            port:
              number: 80
        path: /
        pathType: Prefix
